--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 <div class='App'>
     <header class='App-header'>
         <p><u>
-          Object Detection - YOLO
+          EyeCloud - YOLOv4
         </u></p>
         <div className="pre_img">
           <span><img id="imagebox" src=""></span>
